# LargeScaleMapping

./: CMakeLists.txt  Makefile  README.md  Reconstruct.cpp  dependency_scan.sh  ocvsfm.sh  pose_estimate.py  sfm_reconstruct.cpp
Drone_sim/models/sjtu_drone/: sjtu_drone.sdf
Drone_sim/scripts/: drone_ctrl.py  image_flow.py
Drone_sim/worlds/: contest.world
PyUtils/: camera_caliberator.py  graph_match.py  pose_estimate.py  stereo_feature_est.py
SFM pipeline/: multiview_reconstruction.cpp
SFM_pipeline/: MVRcompile.sh  meta.h  multiview_reconstruct.cpp  to_ply.cpp  to_ply.h
Stereo_pipeline/: Stereo_Matching.py  stereo_ros.py
Stereo_pipeline/rosVO/: CMakeLists.txt
Stereo_pipeline/rosVO/include/: stereoCV.h
Stereo_pipeline/rosVO/src/: StereoCV.cpp
visualOdometry/: VisualOdometry.cpp  bagOfWordsDetector.cpp  bundleAdjust.cpp  frameToFrameBA.cpp  monocularBA.cpp  ros_vo.py  vo.cpp  vo_features.h
visualOdometry/include/: monoOdometry.h  monoUtils.h  poseGraph.h
visualOdometry/src/: monoOdometry.cpp
visualOdometry/visualizer/: plotter.py
